<h5>1.09 RC4</h5> [2019/09/17]
<hr>
 - added option to resize image during upload or not (goffy)
 - added new block style 'list' (goffy)
 - added filter team in admin/relations (goffy)
 - added info about conditions for image upload (goffy)
 - fixed missing check of allowed resolution (goffy)
 
<h5>1.09 RC3</h5> [2019/09/17]
<hr>
 - fixed bug image editor (goffy) 
 - new preference for default size image editor (goffy)
 - new preference for show/hide copyright (goffy)
 - fixed bug with upload very big jpg images (goffy)
 - fixed bug with cropping images (goffy)
 
<h5>1.09 RC2</h5> [2019/04/09]
<hr>
 - fixed bug in block templates (goffy)
 - added few options to teams block (goffy)
 - added bootstrap card style to teams block (goffy) 
 
<h5>1.09 RC1</h5> [2019/04/09]
<hr>
 - moved to RC1 (goffy)
 - cosmetics for image editor (goffy)
 - fixed bug with id in image editor (goffy)
 - fixed bug with non show member title (goffy)
 - new preference "wgteams_showteamname" (goffy)
 - new preference "wgteams_labels_member" (replace "wgteams_labels") (goffy)
 - new preference "wgteams_labels_infofields" (goffy)

<h5>1.09 Beta</h5> [NOT RELEASED]
<hr>
 - added namespaces (mamba)
 - added test data option (goffy)
 - fix Helper's getHandler() (mamba)
 - fix problem with missing member image (goffy)
 - add image editor for grid creation/cropping images (goffy)
 - code cleaning (mamba)

<h5>1.08 final</h5> [2018/06/14]
<hr>
 - final (goffy)

<h5>1.08 RC5</h5> [2017/12/17]
<hr>
 - cosmetics (goffy)
 - added maintenance of tables when updating (goffy)
 - cosmetics (mamba)
 - Array short syntax (mamba)
 - Unnecessary double quotes (mamba)
 - Yoda (mamba)
 - Avoid callables in loop conditionals (mamba)
 - PHPDoc comment matches function/method signature  (mamba)

<h5>1.08 RC4</h5> [2016/11/25]
<hr>
 - added class truncateHTML (Mamba, Lucio/goffy)

<h5>1.08 RC3</h5> [2016/10/09]
<hr>
 - fixed bug: drag&drop ordering of teams (goffy)

<h5>1.08 RC1</h5> [2016/08/19]
<hr>