@@ -1,3 +1,7 @@
+<h5>1.10 RC1</h5> [2020/02/09]
+<hr>
+ - added maintenance / cleaning unused images (goffy)
+
 <h5>1.09 RC4</h5> [2019/09/17]
 <hr>
  - added option to resize image during upload or not (goffy)
